TodoAppBFF/openshift/3_route.yaml
  apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: todoapp-bff
      deploymentconfig: todoapp-bff
    name: todoapp-bff
  spec:
    path: /
    port:
      targetPort: "4000"
    to:
      kind: Service
      name: todoappbff
